--- a/main.css
+++ b/main.css
@@ -2,3 +2,12 @@
   text-align: center;
   background: none;
 }
+
+.sectionLight{
+  background-color: #eceeef;
+  padding: 2em/
+}
+
+.carousel-item {
+ height: 330px;
+}
