--- a/main.css
+++ b/main.css
@@ -24,3 +24,9 @@ button.coolStuffBtn{
   display: block;
   margin: auto;
 }
+h5.modal-title{
+  margin: auto;
+}
+.modalFormWrapper{
+  padding: 2rem;
+}
