--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@
 }
 .sectionLight{
   background-color: #eceeef;
-  padding: 2em/
+  padding: 2rem;
 }
 .sectionDark{
   background-color: #CCCCCC;
@@ -29,4 +29,15 @@ h5.modal-title{
 }
 .modalFormWrapper{
   padding: 2rem;
+}
+.imgCenter{
+  display: block;
+  margin: auto;
+}
+.btnCenter{
+  display: block;
+  margin: auto;
+  margin-top: 15px;
+  margin-bottom: 20px;
+  width: 85%;
 }
